Accept all image files, not just .png (was a bug with imread() - replaced by PIL.Image.open()). Updated gitignore to reject .DS_Store files

--- a/Quickstart.html
+++ b/Quickstart.html
@@ -315,7 +315,7 @@ document.write(`
 <p>The recommended broswer for PyDPE-web is Google Chrome. There are known compatibility issues with Safari and Firefox and we’re working on fixing these. Please consider switching your browser to Chrome if you face issues with a different browser. If this page is taking too long to load, or producing unexpected results, try <span class="raw-html"><a href="https://its.uiowa.edu/support/article/719" target="_blank">clearing your browser's cache</a></span> and then re-loading the website.</p>
 <hr>
 <label for = "user_image">Image file:</label> &nbsp;
-<input type = "file" accept = "image/png" id = "user_image">
+<input type = "file" accept = "image/*" id = "user_image">
 <br><br>
 <label for = "kxmin">kx_min:</label> &nbsp;
 <input type = "number" class = 'pydpe-input' id = "kxmin" min = "-2" max = "2" step = "0.01" value = "-1.00">
