Added tooltip documentation to Quickstart.html. Fixed minor errors in docs.html

--- a/docs.html
+++ b/docs.html
@@ -331,11 +331,11 @@ PyDPE-Web is a web-based version of this package, built using <span class="raw-h
 </tr>
 <tr class="row-odd"><td><p>kx_min/kx_max</p></td>
 <td><p>-1.0/1.0</p></td>
-<td><p>These define the the range in k-space over the x-axis that the image covers</p></td>
+<td><p>These define the range in k-space over the x-axis that the image covers</p></td>
 </tr>
 <tr class="row-even"><td><p>ky_min/ky_max</p></td>
 <td><p>-1.0/1.0</p></td>
-<td><p>These define the range in in k-space over the y-axis that the image covers</p></td>
+<td><p>These define the range in k-space over the y-axis that the image covers</p></td>
 </tr>
 <tr class="row-odd"><td><p><span class="raw-html">&theta;<sub>s</sub></span></p></td>
 <td><p>90.00</p></td>
