Latest versions of Safari seem to be compatible. Modifying Warning on index.html

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 <div id = "browser-warning">
     <div class="admonition warning" id = "browser-version">
          <p class="admonition-title">Warning</p>
-             <p> The recommended broswer for PyDPE-web is Google Chrome. There are known compatibility issues with Safari and Firefox and we're working on fixing these. Please consider switching your browser to Chrome if you face issues with a different browser. </p>
+             <p> PyDPE-Web supports most major browsers and browser versions. However, there are open issues with specific versions of Safari (v14) that we are working on fixing. If you have the latest version of Safari, you should see no issues. For the best experience, please consider switching your browser to Google Chrome (or any other chromium based browser)</p>
      </div>
 </div><div class="sd-container-fluid sd-sphinx-override sd-mb-4 docutils">
 <div class="sd-row sd-row-cols-2 sd-row-cols-xs-2 sd-row-cols-sm-2 sd-row-cols-md-2 sd-row-cols-lg-2 sd-g-3 sd-g-xs-3 sd-g-sm-3 sd-g-md-3 sd-g-lg-3 docutils">
